--- a/beat.css
+++ b/beat.css
@@ -225,7 +225,7 @@ sixths, deciding that .tempo should be one half .artist and one-third title */
 .artist { width: calc( (100% - (5em + 1em)) * 2/6); }
 .title  { width: calc( (100% - (5em + 1em)) * 3/6); }
 .tempo  { width: calc( (100% - (5em + 1em)) * 1/6); }
-
+.length { width: calc( (100% - (5em + 1em)) * 4/6); }
 
 /**************************************
 * Track row styling */
